# rather-staking-contract

./: Cargo.toml
meta/: Cargo.toml
scenarios/: staking_contract.scen.json
src/: staking_contract.rs
tests/: staking_contract_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
