[package]
name = "staking-contract"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/staking_contract.rs"

[dependencies.multiversx-sc]
version = "0.45.1"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.45.1"

[workspace]
members = [
    ".",
    "meta",
]
